--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+    <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
-    <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-    <p>Look at my cool music page.</p>
+    <header>
+      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <h2>Keef Record shop</h2>
+    </header>
+
+    <main>
+      <p>Look at my cool music page.</p>
+    </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
